--- a/statement.html
+++ b/statement.html
@@ -18,7 +18,7 @@ The topic of alternate realities or a multiverse is one many people are familiar
 
 Ages like 19, 29, 39, and on embody the concept that previously unimaginable events like dimension travelling can happen then and only then. This is due to the fact that 9 is the closest lower number to 10, a divine number representing perfection, maximum creativity, and wholeness. 9 is almost there, but not quite, resulting in a fractured and chaotic multiverse that becomes accessible.<br/><br/>
 
-Travel through this guide book to visit dimensions generated each day for 29 days.
+<!-- Travel through this guide book to visit dimensions generated each day for 29 days. -->
 </div>
 
 </body>
