--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ ARIANNE ZHANG
     <video width="320" height="450" controls>
         <source src="compilation.mp4" type="video/mp4">
       </video>
+
+      <!-- im just writing something here to change it -->
 </div>
 <div class="venn"></div>
 <div class="venn2"></div>
