--- a/print.html
+++ b/print.html
@@ -19,106 +19,106 @@
     </div> -->
     <div class="parent"> 
 <div class="one">
-    <img src="print1.jpg" alt="cover" style="width:250px;height:320px;">
+    <img src="print1.jpg" alt="cover" style="width:370px;height:520px;">
 </div>
 <div class="two">
-    <img src="print12.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="bewhy.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="three">
-    <img src="print13.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="cjamm.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="four">
-    <img src="print14.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="dean.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="five">
-    <img src="print15.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="woo.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="six">
-    <img src="print16.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="simon.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="seven">
-    <img src="print17.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="peno.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="eight">
-    <img src="print18.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="crush.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="nine">
-    <img src="print19.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="youngb.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="ten">
-    <img src="print110.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="tiger.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="eleven">
-    <img src="print111.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="zico.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twelve">
-    <img src="print112.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="yunb.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirteen">
-    <img src="print113.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="dsel.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="fourteen">
-    <img src="print114.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="khundi.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="fifteen">
-    <img src="print115.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="asol.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="sixteen">
-    <img src="print116.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="ziont.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="seventeen">
-    <img src="print117.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="wonstein.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="eighteen">
-    <img src="print118.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="chillin.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="nineteen">
-    <img src="print119.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="giri.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty">
-    <img src="print120.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="dpr.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty1">
-    <img src="print121.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="mokyo.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty2">
-    <img src="print122.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="millic.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty3">
-    <img src="print123.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="dbo.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty4">
-    <img src="print124.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="jungkook.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty5">
-    <img src="print125.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="jimin.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty6">
-    <img src="print126.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="tae.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty7">
-    <img src="print127.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="gray.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty8">
-    <img src="print128.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="loco.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="twenty9">
-    <img src="print129.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="print129.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirty">
-    <img src="print130.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="jay.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirty1">
-    <img src="print131.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="codekunst.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirty2">
-    <img src="print132.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="hangzoo.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirty3">
-    <img src="print133.jpg" alt="cover" style="width:500px;height:320px;">
+    <img src="ek.jpg" alt="cover" style="width:750px;height:520px;">
 </div>
 <div class="thirty4">
-    <img src="print134.jpg" alt="cover" style="width:250px;height:320px;">
+    <img src="print134.jpg" alt="cover" style="width:370px;height:520px;">
 </div>
 
 
