--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ ARIANNE ZHANG
 </div>
 
 <div class="landing">
-    <video width="320" height="450" controls>
-        <source src="compilation.mp4" type="video/mp4">
+    <video width="1400" height="650" controls>
+        <source src="ashisland.mp4" type="video/mp4">
       </video>
 
       <!-- im just writing something here to change it -->
@@ -53,180 +53,185 @@ ARIANNE ZHANG
     </div> -->
 
     <div class="parent"> 
-         <div class="one">
+         <div class="div1">
         <video width="220" height="350" controls>
             <source src="one.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="two">
+    <div class="div2">
         <video width="220" height="350" controls>
             <source src="two.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="three">
+    <div class="div3">
         <video width="220" height="350" controls>
             <source src="four.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="four">
+    <div class="div4">
         <video width="220" height="350" controls>
             <source src="fivevideo.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="five">
+    <div class="div5">
         <video width="220" height="350" controls>
             <source src="sixtwo.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="six">
+    <div class="div6">
         <video width="220" height="350" controls>
             <source src="seven.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="seven">
+    <div class="div7">
         <video width="220" height="350" controls>
             <source src="eight.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="eight">
+    <div class="div8">
         <video width="220" height="350" controls>
             <source src="nine.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="nine">
+    <div class="div9">
         <video width="220" height="350" controls>
             <source src="ten.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="ten">
+    <div class="div10">
         <video width="220" height="350" controls>
             <source src="observer.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="eleven">
+    <div class="div11">
         <video width="220" height="350" controls>
             <source src="twelve.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twelve">
+    <div class="div12">
         <video width="220" height="350" controls>
             <source src="thirteen.MP4" type="video/mp4">
           </video>
 
     </div>
-    <div class="thirteen">
+    <div class="div13">
         <video width="220" height="350" controls>
             <source src="fourteen.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="fourteen">
+    <div class="div14">
         <video width="220" height="350" controls>
             <source src="ascend15.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="fifteen">
+    <div class="div15">
         <video width="220" height="350" controls>
             <source src="sixteen.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="sixteen">
+    <div class="div16">
         <video width="220" height="350" controls>
             <source src="seventeen.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="seventeen">
+    <div class="div17">
         <video width="220" height="350" controls>
             <source src="eighteen.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="eighteen">
+    <div class="div18">
         <video width="220" height="350" controls>
             <source src="nineteen.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="nineteen">
+    <div class="div19">
         <video width="220" height="350" controls>
             <source src="twentyae.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twenty">
+    <div class="div20">
         <video width="220" height="350" controls>
             <source src="twentyonee.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentyone">
+    <div class="div21">
         <video width="220" height="350" controls>
             <source src="twentytwovid.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentytwo">
+    <div class="div22">
         <video width="220" height="350" controls>
             <source src="twentythreevid.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentythree">
+    <div class="div23">
         <video width="220" height="350" controls>
             <source src="twentyfour.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentyfour">
+    <div class="div24">
         <video width="220" height="350" controls>
             <source src="twentyfive.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentyfive">
+    <div class="div25">
         <video width="220" height="350" controls>
             <source src="twentysix.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentysix">
+    <div class="div26">
         <video width="220" height="350" controls>
             <source src="twenyseven.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentyseven">
+    <div class="div27">
         <video width="220" height="350" controls>
             <source src="twentyeight.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentyeight">
+    <div class="div28">
         <video width="220" height="350" controls>
             <source src="twentynine.mp4" type="video/mp4">
           </video>
 
     </div>
-    <div class="twentynine">
+    <div class="div29">
         <video width="220" height="350" controls>
             <source src="thirtyone.mp4" type="video/mp4">
           </video>
 
     </div>
+    </div>
+
+    <div class="footer">
+
+        OCTOBER-DECEMBER 2020 | SOME WORDS | ARIANNE ZHANG
     </div>
 
     <!-- make 29 equal size boxes in a grid?? below the landing and artists statement. videos but hover over and there is a description. ask about responsive design. include pdf of book that u can click to flip the page. -->
