--- a/statement.html
+++ b/statement.html
@@ -18,6 +18,8 @@ The topic of alternate realities or a multiverse is one many people are familiar
 
 Ages like 19, 29, 39, and on embody the concept that previously unimaginable events like dimension travelling can happen then and only then. This is due to the fact that 9 is the closest lower number to 10, a divine number representing perfection, maximum creativity, and wholeness. 9 is almost there, but not quite, resulting in a fractured and chaotic multiverse that becomes accessible.<br/><br/>
 
+I realized my concept of a multiverse by creating a graphic each day for 29 days and built a collection of 3D virtual environments. Starting with primaries like cubes and spheres, I sculpted dinosaurs, landscapes, and my visions of space. Some of the worlds are seen through the viewer's perspective, with the camera flying through the dimensions while some of the worlds are less subjective, and are unmoving through the lens. I included several graphics about rules and objects that didn't just depict environments. Those focused less on making a realistic or familiar visual and were more abstract as a result. Working with dream-like materials and textures, I combined them with shapes and extrusions to form complex scenes. I included references and motifs across the collection, nonetheless, the graphics can be viewed in or out of sequence.
+
 <!-- Travel through this guide book to visit dimensions generated each day for 29 days. -->
 </div>
 
