--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <div class="container">
 <div class="title">
     SOME WORDS
 </div>
@@ -22,17 +23,19 @@ ARIANNE ZHANG
     <a href="statement.html" target="_blank">PROJECT STATEMENT</a>
 </div>
 
+
+<div class="venn"></div>
+<div class="venn2"></div>
+<div class="venn3"></div>
+<div class="venn4"></div>
+</div>
 <div class="landing">
-    <video width="1400" height="650" controls>
+    <video controls>
         <source src="ashisland.mp4" type="video/mp4">
       </video>
 
       <!-- im just writing something here to change it -->
 </div>
-<div class="venn"></div>
-<div class="venn2"></div>
-<div class="venn3"></div>
-<div class="venn4"></div>
 <!-- <div class="art">This project began from seeing an upside down tree floating in the sky in August of 2020 from the fire escape of my apartment in Brooklyn. Strangely, later that day, a stranger on social media uploaded a picture of the glitch I saw, but from a highway in California.
 
     The topic of alternate realities or a multiverse is one many people are familiar with, whether through television shows or books. I wanted to visualize my own theories of what those places look like, the laws that govern them, and the in-betweens.
@@ -230,8 +233,8 @@ ARIANNE ZHANG
     </div>
 
     <div class="footer">
-
-        OCTOBER-DECEMBER 2020 | SOME WORDS | ARIANNE ZHANG
+<div class="line"></div>
+        <p>OCTOBER-DECEMBER 2020 | SOME WORDS | ARIANNE ZHANG</p>
     </div>
 
     <!-- make 29 equal size boxes in a grid?? below the landing and artists statement. videos but hover over and there is a description. ask about responsive design. include pdf of book that u can click to flip the page. -->
